align fix

--- a/src/stylus/organisms/_footer.styl
+++ b/src/stylus/organisms/_footer.styl
@@ -1,6 +1,6 @@
 .footer
 	width 100%
-	padding spacing(16px) spacing(24px)
+	padding spacing(16px) 0
 	border-top 1px solid var(--divider-color)
 	display flex
 	flex-direction row
@@ -9,10 +9,11 @@
 		flex-direction column
 
 	&__col
-		max-width 100%
+		max-width 50%
 		width 100%
 		display flex
 		flex-direction row
+		padding 0 2rem
 
 		h4
 			set-font-size(14px)
